Kubernetes/apps/base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-platform
  namespace: apps
  labels:
    app.kubernetes.io/name: order-platform
    app.kubernetes.io/part-of: order-fulfillment
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: app.lab.mohammedsayed.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.lab.mohammedsayed.com
      secretName: app-lab-mohammedsayed-com-tls
  rules:
    - host: app.lab.mohammedsayed.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8086
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8086
